--- a/trunk/HovercraftUniverse/Content/Content.vcproj
+++ b/trunk/HovercraftUniverse/Content/Content.vcproj
@@ -174,6 +174,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Boost.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CheckPoint.cpp"
 				>
 			</File>
@@ -187,6 +191,14 @@
 			</File>
 			<File
 				RelativePath=".\main.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Portal.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\PowerupSpawn.cpp"
 				>
 			</File>
 			<File
@@ -224,6 +236,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Boost.h"
+				>
+			</File>
+			<File
 				RelativePath=".\CheckPoint.h"
 				>
 			</File>
@@ -233,6 +249,14 @@
 			</File>
 			<File
 				RelativePath=".\Hovercraft.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Portal.h"
+				>
+			</File>
+			<File
+				RelativePath=".\PowerupSpawn.h"
 				>
 			</File>
 			<File
