--- a/HovercraftUniverse/GUI/GUI.vcproj
+++ b/HovercraftUniverse/GUI/GUI.vcproj
@@ -184,10 +184,22 @@
 				RelativePath=".\GUIManager.cpp"
 				>
 			</File>
-			<File
-				RelativePath=".\Test.cpp"
+			<Filter
+				Name="Demo"
 				>
-			</File>
+				<File
+					RelativePath=".\HikariDemo.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\InputManager.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Test.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -207,6 +219,18 @@
 				>
 				<File
 					RelativePath=".\UninitialisedException.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Demo"
+				>
+				<File
+					RelativePath=".\HikariDemo.h"
+					>
+				</File>
+				<File
+					RelativePath=".\InputManager.h"
 					>
 				</File>
 			</Filter>
