--- a/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
+++ b/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
@@ -177,6 +177,26 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\Application.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\ApplicationFrameListener.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\DummyHovercraft.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\DummyHovercraftPlayerController.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\DummyHovercraftRepresentation.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Entity.cpp"
 				>
 			</File>
@@ -197,6 +217,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\InputManager.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\main.cpp"
 				>
 			</File>
@@ -211,7 +235,31 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\Application.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ApplicationFrameListener.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Controller.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DummyHovercraft.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DummyHovercraftController.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DummyHovercraftPlayerController.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DummyHovercraftRepresentation.h"
 				>
 			</File>
 			<File
@@ -236,6 +284,10 @@
 			</File>
 			<File
 				RelativePath=".\HUD.h"
+				>
+			</File>
+			<File
+				RelativePath=".\InputManager.h"
 				>
 			</File>
 			<File
