--- a/trunk/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
+++ b/trunk/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\OgreMax&quot;;&quot;$(ProjectDir)..\dependencies\Havoc\Source&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\include\OIS&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\include\OGRE&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\include&quot;;&quot;$(ProjectDir)..\GUI&quot;;&quot;$(ProjectDir)..\dependencies\Hikari\includes&quot;;&quot;$(ProjectDir)..\dependencies\FMOD\includes&quot;;&quot;$(ProjectDir)..\Sound&quot;"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\OgreMax&quot;;&quot;$(ProjectDir)..\dependencies\Havoc\Source&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\include\OIS&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\include\OGRE&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\include&quot;;&quot;$(ProjectDir)..\GUI&quot;;&quot;$(ProjectDir)..\dependencies\Hikari\includes&quot;;&quot;$(ProjectDir)..\dependencies\FMOD\includes&quot;;&quot;$(ProjectDir)..\Sound&quot;;&quot;$(ProjectDir)..\Networking&quot;;&quot;$(ProjectDir)..\dependencies\zoidcom\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -61,9 +61,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="OgreMax_d.lib OgreMain_d.lib OIS_d.lib GUI_d.lib Hikari_d.lib hkaAnimation.lib hkaInternal.lib hkaRagdoll.lib hkBase.lib hkCompat.lib hkGeometryUtilities.lib hkInternal.lib hkpCollide.lib hkpConstraintSolver.lib hkpDynamics.lib hkpInternal.lib hkpUtilities.lib hkpVehicle.lib hkSceneData.lib hksCommon.lib hkSerialize.lib hksXAudio2.lib hkVisualize.lib fmod_event.lib fmodex_vc.lib"
+				AdditionalDependencies="OgreMax_d.lib OgreMain_d.lib OIS_d.lib GUI_d.lib Hikari_d.lib hkaAnimation.lib hkaInternal.lib hkaRagdoll.lib hkBase.lib hkCompat.lib hkGeometryUtilities.lib hkInternal.lib hkpCollide.lib hkpConstraintSolver.lib hkpDynamics.lib hkpInternal.lib hkpUtilities.lib hkpVehicle.lib hkSceneData.lib hksCommon.lib hkSerialize.lib hksXAudio2.lib hkVisualize.lib fmod_event.lib fmodex_vc.lib zoidcom_vcd.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\lib\Debug&quot;;&quot;$(ProjectDir)..\dependencies\Havoc\Lib\win32_net_9-0\debug_multithreaded_dll&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\lib\debug&quot;;&quot;$(ProjectDir)..\dependencies\Hikari\lib&quot;;&quot;$(ProjectDir)..\dependencies\FMOD\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\lib\Debug&quot;;&quot;$(ProjectDir)..\dependencies\Havoc\Lib\win32_net_9-0\debug_multithreaded_dll&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\lib\debug&quot;;&quot;$(ProjectDir)..\dependencies\Hikari\lib&quot;;&quot;$(ProjectDir)..\dependencies\FMOD\lib&quot;;&quot;$(ProjectDir)..\dependencies\zoidcom\lib\debug&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -117,7 +117,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\OgreMax&quot;;&quot;$(ProjectDir)..\dependencies\Havoc\Source&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\include\OIS&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\include\OGRE&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\include&quot;;&quot;$(ProjectDir)..\dependencies\Hikari\includes&quot;;&quot;$(ProjectDir)..\GUI&quot;;&quot;$(ProjectDir)..\dependencies\FMOD\includes&quot;;&quot;$(ProjectDir)..\Sound&quot;"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\OgreMax&quot;;&quot;$(ProjectDir)..\dependencies\Havoc\Source&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\include\OIS&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\include\OGRE&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\include&quot;;&quot;$(ProjectDir)..\GUI&quot;;&quot;$(ProjectDir)..\dependencies\Hikari\includes&quot;;&quot;$(ProjectDir)..\dependencies\FMOD\includes&quot;;&quot;$(ProjectDir)..\Sound&quot;;&quot;$(ProjectDir)..\Networking&quot;;&quot;$(ProjectDir)..\dependencies\zoidcom\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -136,7 +136,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="OgreMax.lib OgreMain.lib OIS.lib GUI.lib Hikari.lib hkaAnimation.lib hkaInternal.lib hkaRagdoll.lib hkBase.lib hkCompat.lib hkGeometryUtilities.lib hkInternal.lib hkpCollide.lib hkpConstraintSolver.lib hkpDynamics.lib hkpInternal.lib hkpUtilities.lib hkpVehicle.lib hkSceneData.lib hksCommon.lib hkSerialize.lib hksXAudio2.lib hkVisualize.lib fmod_event.lib fmodex_vc.lib"
+				AdditionalDependencies="OgreMax.lib OgreMain.lib OIS.lib GUI.lib Hikari.lib hkaAnimation.lib hkaInternal.lib hkaRagdoll.lib hkBase.lib hkCompat.lib hkGeometryUtilities.lib hkInternal.lib hkpCollide.lib hkpConstraintSolver.lib hkpDynamics.lib hkpInternal.lib hkpUtilities.lib hkpVehicle.lib hkSceneData.lib hksCommon.lib hkSerialize.lib hksXAudio2.lib hkVisualize.lib fmod_event.lib fmodex_vc.lib zoidcom_vc.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\lib\release&quot;;&quot;$(ProjectDir)..\dependencies\Havoc\Lib\win32_net_9-0\release_multithreaded_dll&quot;;&quot;$(ProjectDir)..\dependencies\OGRE\lib\release&quot;;&quot;$(ProjectDir)..\dependencies\Hikari\lib&quot;;&quot;$(ProjectDir)..\dependencies\FMOD\lib&quot;"
 				GenerateDebugInformation="true"
@@ -200,6 +200,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\DummyHovercraftController.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\DummyHovercraftPlayerController.cpp"
 					>
 				</File>
@@ -220,11 +224,31 @@
 					>
 				</File>
 				<File
+					RelativePath=".\BasicEntityEvent.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\ClientCore.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\ControllerEvent.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\ControllerEventParser.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Entity.cpp"
 					>
 				</File>
 				<File
 					RelativePath=".\EntityManager.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\EntityRegister.cpp"
 					>
 				</File>
 				<File
@@ -240,7 +264,15 @@
 					>
 				</File>
 				<File
+					RelativePath=".\NetworkIDManager.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\RepresentationManager.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\ServerCore.cpp"
 					>
 				</File>
 			</Filter>
@@ -294,7 +326,27 @@
 					>
 				</File>
 				<File
+					RelativePath=".\BasicEntityEvent.h"
+					>
+				</File>
+				<File
+					RelativePath=".\ClientCore.h"
+					>
+				</File>
+				<File
 					RelativePath=".\Controller.h"
+					>
+				</File>
+				<File
+					RelativePath=".\ControllerEvent.h"
+					>
+				</File>
+				<File
+					RelativePath=".\ControllerEventParser.h"
+					>
+				</File>
+				<File
+					RelativePath=".\ControllerEventType.h"
 					>
 				</File>
 				<File
@@ -303,6 +355,10 @@
 				</File>
 				<File
 					RelativePath=".\EntityManager.h"
+					>
+				</File>
+				<File
+					RelativePath=".\EntityRegister.h"
 					>
 				</File>
 				<File
@@ -322,7 +378,15 @@
 					>
 				</File>
 				<File
+					RelativePath=".\NetworkIDManager.h"
+					>
+				</File>
+				<File
 					RelativePath=".\RepresentationManager.h"
+					>
+				</File>
+				<File
+					RelativePath=".\ServerCore.h"
 					>
 				</File>
 			</Filter>
